--- a/.poggit.yml
+++ b/.poggit.yml
@@ -1,5 +1,8 @@
 --- # Poggit-CI Manifest. Open the CI at https://poggit.pmmp.io/ci/UnendingApple/TestUI
 branches:
 - master
-projects: []
-...
+projects: 
+  TextUI:
+  Path: ""
+  model: default
+  ...
